--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ var processor = new DataAnonymizer();
 var cleanData = processor.Anonymize(rawData);`;
 ---
 <BaseLayout title="Túlio Ribeiro dos Anjos | Senior Backend Engineer">
-    <Navbar/>
+    <Navbar currentPage="Home"/>
     <Hero/>
 
     <!-- Add JS for scroll behavior (could also be moved into a separate component) -->
