--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,23 +1,29 @@
+---
+/* Hero.astro */
+---
 <div class="min-h-screen flex items-center justify-center relative">
     <div class="text-center max-w-2xl px-4">
-        <div class="mb-8">
-            <div class="text-6xl md:text-7xl font-mono text-primary">
-                <span class="text-text-secondary"></></span>
-            </div>
-        </div>
         <h1 class="text-4xl md:text-5xl font-bold mb-4 tracking-tight">tulio_anjos</h1>
-        <p class="text-xl text-text-secondary mb-8 font-mono">senior_backend_engineer</p>
+        <p class="text-xl text-[var(--color-text-secondary)] mb-8 font-mono">senior_backend_engineer</p>
         <div class="space-y-4">
-            <a href="/resume"
-               class="inline-block w-full md:w-auto bg-primary text-[var(--color-surface)] px-8 py-3 rounded-lg hover:bg-[#2b6cb0]/90 transition-colors font-mono text-sm">
+            <a
+              href="/resume"
+              class="inline-block w-full md:w-auto bg-[var(--color-primary)] text-[var(--color-surface)] px-8 py-3 rounded-lg hover:bg-[var(--color-primary)]/90 transition-colors font-mono text-sm"
+            >
                 view_resume().html
             </a>
         </div>
     </div>
-    <div class="absolute bottom-8 left-1/2 transform -translate-x-1/2 animate-bounce cursor-pointer" id="scroll-arrow">
-        <svg class="w-6 h-6 fill-current text-primary" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" clip-rule="evenodd"
-                  d="M11.9997 13.1716L4.9281 6.0999L6.3423 4.6857L11.9997 10.3431L17.6571 4.6857L19.0713 6.0999L11.9997 13.1716Z"/>
+    <div
+      class="absolute bottom-8 left-1/2 transform -translate-x-1/2 animate-bounce cursor-pointer"
+      id="scroll-arrow"
+    >
+        <svg class="w-6 h-6 fill-current text-[var(--color-primary)]" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M11.9997 13.1716L4.9281 6.0999L6.3423 4.6857L11.9997 10.3431L17.6571 4.6857L19.0713 6.0999L11.9997 13.1716Z"
+            />
         </svg>
     </div>
 </div>
