fix: hydrate navbar

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ var cleanData = processor.Anonymize(rawData);
 ---
 
 <BaseLayout title="Túlio Ribeiro dos Anjos | Senior Backend Engineer">
-    <Navbar currentPage="Home"/>
+    <Navbar client:only="react"/>
     <Hero/>
 
     <!-- Smooth Scroll Script for Hero Arrow -->
