--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -3,7 +3,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 import Navbar from '../components/Navbar.tsx';
 ---
 <BaseLayout title="Túlio Ribeiro dos Anjos | Resume">
-    <Navbar currentPage="Resume" />
+    <Navbar client:only="react"/>
     <main class="pt-24 max-w-6xl mx-auto px-6 py-16 space-y-20">
         <!-- Header Section -->
         <section class="text-center space-y-4">
