fix: hydration issue

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ var cleanData = processor.Anonymize(rawData);
 `;
 ---
 <BaseLayout title="Túlio Ribeiro dos Anjos | Senior Backend Engineer">
-    <Navbar client:only="react"/>
+    <Navbar client:load/>
     <Hero/>
 
     <!-- Smooth Scroll Script for Hero Arrow -->
