--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -3,7 +3,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 import Navbar from '../components/Navbar.tsx';
 ---
 <BaseLayout title="Túlio Ribeiro dos Anjos | Blog">
-    <Navbar client:only="react"/>
+    <Navbar client:load/>
 
     <main class="flex items-center justify-center h-screen px-6">
         <div class="text-center space-y-6">
