feat: try svelte

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
-import Navbar from '../components/Navbar.tsx';
+import Navbar from '../components/Navbar.svelte';
 ---
 <BaseLayout title="Túlio Ribeiro dos Anjos | Blog">
     <Navbar client:load/>
