--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
-import Navbar from '../components/Navbar.tsx';
+import Navbar from '../components/Navbar.svelte';
 import Hero from '../components/Hero.astro';
 import Footer from '../components/Footer.astro';
 import FloatingLinks from '../components/FloatingLinks.tsx';
