feat: dumber-no-different post

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,5 @@
 @import 'tailwindcss';
+@plugin "@tailwindcss/typography";
 
 @theme {
     --font-sans: "Space Grotesk", system-ui;  /* Modern tech vibe */
