fix: timezone issue

--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -23,6 +23,7 @@ const {frontmatter} = Astro.props;
                     year: 'numeric',
                     month: 'long',
                     day: 'numeric',
+                    timeZone: 'UTC'
                   })}
                 </time>
                 <slot/>
